Style.css
*{padding: 0%;margin: 0%; overflow-x: hidden;}

body{height:100vh;width: 100vw;
font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
font-weight: bolder;
background-color: black ;
color: white;}
/*========================--navbar--=================-*/
.nav{
   
    width: 15%;
    height: 100%;
    box-shadow: 0px 1px 8px 3px rgb(19, 19, 19);
    justify-content: center;
    font-size: large;
    position: fixed; 
    top: 0%;left: 0%;
    overflow-y: hidden;
}

.listdiv ul{text-align: center; margin-top: 3em;}
.nav li{
    list-style-type: none;
    position: relative ;top: 10%;
    padding-bottom: 3em;
    text-decoration: none;
}

.logo{display: block;
color: blue;
text-align: center;
margin-top: 2em;
animation:headerh2 infinite 8s linear; }
.nav li a{
    text-decoration: none;
    color: white;
    display: inline-block;
    justify-content: center;
    align-items: center;
}
.nav li a:hover{
    background-color: blue;
}


/*========================--header page--=================-*/
header{height: 100vh;width:100vw; }
.main{  
    display: inline-block;
    margin-left: 30px;
   
        }

.main h2{color:blue; animation:headerh2 infinite 8s linear;} 
.mode{position: fixed; top: 3% ; right: 3%; font-size: 10px; display: inline-block;}
.imgbox{
      margin: 7% 0% 0% 20%;
      display: inline-block;
      border-radius: 50%;
      box-shadow: 1px 1px 3px 2px violet,-1px -2px 3px 5px blue;
      position: relative;
      overflow-y: hidden;
}
.imgbox::before{
    content: '';
    height: 252px;width: 251px;
    border-radius: 50%;
    border: dotted 3px violet;
    position: absolute;top: 2px;;
    box-sizing: border-box;
    animation: rotate 15s linear infinite;
}   
.option{
    padding: 20px;
    border-radius: 5px;
    opacity: 0.6;
}

.file{  margin: 2% 0% 0% 42%;
     display:flex
     
      }
.resume{
    background-color: white;color: black;
    }
.resume:hover{color: blue; opacity:1; cursor: pointer; }   
.hire{
         background-color:blue; color:white;}
.hire:hover{ color: black;opacity: 1; cursor: pointer;}


/*========================--About myself--=====================-*/
.about{
   
    margin-top: 20%;
    margin-left: 15%;
    height: 100%
    
}
.aboutmeh1{
    padding:30px 30px;
    color: white;
    text-decoration: underline;
    animation:headerh2 infinite 8s linear;
    }
   
.para{
    height: 500px;
    width: 600px;
    margin-left: 8%;
    font-size: 16px;
    overflow:hidden;line-height: 30px;
    }


    /*========================--education--===========================-*/
.educationh1{ padding-bottom: 15px;
    color: blue; 
    text-decoration: underline; 
    animation:headerh2 infinite 8s linear;}
    .education{
        height: 100%;
        margin-left: 20%;
        justify-content:center;
        align-items: center;
        display: block;
        overflow: hidden;

     }
     
     .edu{
       margin-top: 1rem;
       line-height: 3rem;
     }

     .score{display: inline}
    .outer{
        background-color: gainsboro;
        height: 10px;
        animation: extend 2s  forwards;
    }
    

    .inner{
        background-color: blue;
        height:10px ; 
        
      }
   
     .score77  {
        width: 0px;
        
        animation: score77 4s forwards;
           }
    .score61{
        width: 0px;
        animation: score61 4s forwards;
            }
    .score89{
        width: 0px;
        animation: score89 4s forwards;
            } 


     /*========================--skills--======================-*/
.skills{ height: 100vh; }
.skillsh1{ margin-top:2rem; margin-left: 15rem;;}
.skillsh1 h1{
    color: blue;
    text-decoration: underline;
    animation:headerh2 infinite 8s linear;} 
.frontend{ 
    margin-top:3rem;
    margin-left:10rem;
    display: flex;
    justify-content: space-around;}
.fa-html5,.fa-css3-alt,.fa-js{font-size: 150px;overflow: hidden;}
.html{color: orangered; }
.css{color: blue;}
.js{color: rgb(255, 234, 2);}
.skillcontainer{
    margin-top: 7rem;margin-left:10rem;
    display: flex;
    justify-content: space-evenly;}
.fa-bootstrap,.fa-c{font-size: 150px;overflow: hidden;}
.fa-bootstrap{color:darkmagenta}
.fa-c{color: darkcyan;}

/*========================--address--============================-*/
.address{ 
    height: 100vh;
    padding: 3rem 0rem 0rem 15rem;
    }
.addressh1{color: blue;
     text-decoration: underline;
     animation:headerh2 infinite 8s linear;}
.details{
    padding-top: 40px;
    display: flex;
    justify-content: space-around;
}
.details ul li{
    padding: 5px 0px;
    font-size: 28px;
}
iframe{padding-left: 20px; }



/*========================-footer/websites--========================-*/
.footer {
    height: 100vh;width: 100vw;
}
.webh1{color: blue;
     text-decoration: underline;
     animation:headerh2 infinite 8s linear;
    position: relative;top: 5%;left:20%}

.fa-envelope{
    font-size: 130px;
    overflow:hidden;
    color: rgb(54, 185, 54);
    margin:7% 0% 0% 28%;
}
.fa-linkedin{
    font-size: 130px;
    overflow:hidden;
    color: blue;
    margin:7% 0% 0% 25%;}
.fa-github{color:white;
    font-size: 130px;
    overflow:hidden;
     margin:7% 0% 0% 28%;
}
.fa-youtube{font-size: 130px;
        color: red;
        overflow:hidden;
        margin:7% 0% 0% 25%;}



@keyframes extend {
    0%{ width: 0px;}
    100%{width: 700px;}
}
@keyframes score77 {
    0%{ width: 0px;}
    100%{width: 539px;}
}
@keyframes score61 {
    0%{ width: 0px;}
    100%{width: 427px;}
}
@keyframes score89 {
    0%{ width: 0px;}
    100%{width: 623px;}
} @keyframes rotate {
    0%{
    
        transform: rotate(0deg);
    }
    100%{transform:rotate(360deg) ;}
}
@keyframes headerh2 {
    25%{color: blue;}
    100%{color:blueviolet;}
}
/*======================---Media queries---===========================*/
@media screen and (max-width:568px) {
    .body{font-size: smaller;height: 100%;width: 100%; overflow: hidden;}
    /*=======---navbar m-queries---============*/
.nav {position: fixed;
    margin-top: 0px ; 
    width: 100%;
    height: 45%; 
    z-index: 1;
    box-shadow: none;
}

.nav .logo{margin-top: 0%;
    background-color: blue;
    color: white;
    animation: none;
    font-size: 1em;
    padding: 3%;
    align-items: center;
    z-index: 1;
}
.nav .btn{display:block;
    border: 1px solid white;
    padding: 4px;
    position: absolute;right: 5px;top: 10px;
    background-color:black;
}
.nav .btn span{
    display: block;
    width: 25px;height: 1px;
    border-top: 2px solid white;
}
.nav .btn span:not(:last-child){
    margin-bottom: 5px;
}
.nav .listdiv ul{margin-top: 0px;
    background-color: blue;
}
.nav .listdiv a {text-decoration: none;color:white; }
.nav .listdiv ul li{
    list-style-type: none;
    margin-top:5px ;
    padding-bottom: 1em;
}
.hide{display:none;}

 /*=======---header m-queries---============*/
.header{ height: 100%;width: 100%;}
.mode{position: fixed; margin-top: 12%;font-size: 13px;z-index: 2; }
.imgbox{
    margin:30% 0% 0% 20% ;
}
header .main{margin:5% 0% 0% 10%  ; font-size: 14px;}
header .file{margin: 3% 0% 0% 10%;
padding-bottom: 20%;}

 /*=======---about m-queries---============*/
.about{min-height: 100%;width: 100%;
    padding-top: 7%;
    margin:0px 0px 0px 0px;
     }
.about h1{margin-left: 0%;}
.about .para{font-size: 13px;
    line-height: 25px;
     max-width:80%; max-height: 100%;overflow:visible}
 /*=======---Education m-queries---============*/
.education{height: 100%;width: 100%;
margin-left: 3%;
}
.educationh1{margin-left: 0%;margin-top: 10%;}
.education .outer{width:90%; animation: none;}
.score77 {width: 69%; animation: none;}
.score61 {width: 54%; animation: none;}
.score89 {width: 80%; animation: none;}

 /*=======---skills m-queries---============*/
.skills{margin-left: 3%;padding-top: 8%;}
.skillsh1{margin-left: 0%;}
.frontend{margin:25% 0%;}
.fa-html5,.fa-css3-alt,.fa-js,.fa-bootstrap,.fa-c{
    font-size: 5em;
}

.box{margin-left: 0%;}
.skillcontainer{margin:20% 0%;}

 /*=======---address m-queries---============*/
.address{padding: 0%; height: 100%;width: 100%; font-size: smaller;}
.addressh1{margin:13% 0% 0% 3% ;
    padding: 0%;
    animation: none;}
    .details ul li{font-size: 2em;}
.details {display: block;margin-left: 6%;
padding-top: 10px;}
.details iframe{padding:10% 0% 15% 0%;margin-left: 2%;height: 100%;width: 70%;}

/*=======---website m-queries---============*/
.footer{height:100% ; width: 100%;padding-top: 100px;}
.webh1{position:relative ;top:20%;left:3%; }
.websites{margin-top: 60%;}
.fa-envelope{margin: 25% 0% 0% 20%;font-size: 5em;}
.fa-linkedin{margin:0%;padding-left: 20%;font-size: 5em;}
.fa-github{margin: 25% 0% 0% 20%;font-size: 5em;}
.fa-youtube{margin:0%;padding-left: 20%;font-size: 5em;}


}

